# oglSample

./: README.md
dev/assets/: cube.txt  fragm.glsl  sphere.txt  vertex.glsl
dev/src/: CMakeLists.txt  Ships.sln
dev/src/engine/: CMakeLists.txt  engine.vcxproj  engine.vcxproj.filters
dev/src/engine/private/: engine.cpp  glExtenstions.cpp  glExtenstions.h  graphics.cpp  graphics.h  renderer.cpp  renderer.h  shader.h  sprite.cpp  spritesRenderer.cpp  spritesRenderer.h  textureManager.cpp  window.cpp  window.h
dev/src/engine/public/: engine.h  game.h  input.h  inputCodes.h  sprite.h  textureManager.h
dev/src/game/: CMakeLists.txt  game.vcxproj  game.vcxproj.filters  mainGame.cpp
dev/src/game/src/: asteroid.cpp  asteroid.h  asteroidsManager.cpp  asteroidsManager.h  game.cpp  game.h  inputManager.cpp  inputManager.h  mainGame.cpp  missilesManager.cpp  missilesManager.h  movement.cpp  movement.h
dev/src/props/: Common.props  Tests.props
dev/src/resterizer/: rasterizer.vcxproj  rasterizer.vcxproj.filters
dev/src/resterizer/src/: color.h  float4.h  float4x4.h  game.cpp  game.h  imageBuffer.h  model.cpp  model.h  shader.cpp  shader.h  simdProcessor.cpp  simdProcessor.h  tgaBuffer.cpp  tgaBuffer.h  triangle.cpp  triangle.h
dev/src/tests/testCore/: testCore.vcxproj  testCore.vcxproj.filters
dev/src/tests/testCore/private/: main.cpp  testFileStream.cpp  testWindow.cpp
dev/src/tests/testExample/: testExample.vcxproj  testExample.vcxproj.filters
dev/src/tests/testExample/private/: build.h  main.cpp  testFramework.h
dev/src/utils/: CMakeLists.txt  utils.vcxproj  utils.vcxproj.filters
dev/src/utils/private/: absolutePath.cpp  debug.cpp  fileStream.cpp  fileUtils.cpp  image.cpp  random.cpp  timer.cpp  window.cpp
dev/src/utils/public/: absolutePath.h  debug.h  fileStream.h  fileUtils.h  hash.h  image.h  input.h  inputCodes.h  macros.h  matrix.h  random.h  stream.h  timer.h  types.h  vector2.h  vector4.h  window.h  wndincl.h
